--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- <base href="/" /> -->
+    <base href="/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -33,6 +33,10 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
+    <div id="loading" class="loading">
+      <div class="logo"></div>
+    </div>
+    <div id="flutter-container" class="hidden"></div>
     <script type="text/javascript">
       (function () {
         const redirect = sessionStorage.redirect;
