--- a/index.html
+++ b/index.html
@@ -24,17 +24,118 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="quiz_games" />
-    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <link rel="apple-touch-icon" href="icons/quiz-logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>quiz_games</title>
     <link rel="manifest" href="manifest.json" />
+
+    <style>
+      body {
+        margin: 0;
+        background: rgba(153, 49, 1, 0.1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100vh;
+      }
+      .loading {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .logo {
+        width: 200px;
+        height: 200px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("icons/quiz-logo.png");
+        animation: fill-color 3s ease-in-out infinite;
+        animation: fade-in 3s ease-in-out infinite;
+      }
+      @keyframes fill-color {
+        0% {
+          background-color: gray;
+        }
+        100% {
+          background-color: #0056b3;
+        }
+      }
+      @keyframes fade-in {
+        0% {
+          opacity: 0.4;
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0.4;
+        }
+      }
+
+      .messages-carousel {
+        position: relative;
+        height: 100px; /* Adjust height as needed */
+        min-width: 200px;
+        /* overflow: hidden; */
+        text-align: center;
+        color: #333;
+        font-size: 18px;
+        font-family: Arial, sans-serif;
+      }
+      .message {
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        animation: pop-up 8s infinite;
+      }
+      @keyframes pop-up {
+        0% {
+          opacity: 0;
+        }
+        5% {
+          opacity: 0.8;
+        }
+        20% {
+          opacity: 0.8;
+        }
+        25% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 0;
+        }
+      }
+      .message:nth-child(1) {
+        animation-delay: 0s;
+      }
+      .message:nth-child(2) {
+        animation-delay: 2s;
+      }
+      .message:nth-child(3) {
+        animation-delay: 4s;
+      }
+      .message:nth-child(4) {
+        animation-delay: 6s;
+      }
+    </style>
   </head>
   <body>
     <div id="loading" class="loading">
       <div class="logo"></div>
+      <hr />
+      <div class="messages-carousel">
+        <div class="message">Quiz data is loading...</div>
+        <div class="message">Please wait...</div>
+        <div class="message">Initializing quiz engine...</div>
+        <div class="message">Almost there...</div>
+      </div>
     </div>
     <div id="flutter-container" class="hidden"></div>
     <script type="text/javascript">
