--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <meta name="description" content="A new Flutter project." />
 
     <!-- iOS meta tags & icons -->
-    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="quiz_game" />
-    <link rel="apple-touch-icon" href="/quiz_game/icons/quiz-logo.png" />
+    <link rel="apple-touch-icon" href="icons/quiz-logo.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/quiz_game/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>quiz_game</title>
-    <link rel="manifest" href="/quiz_game/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
 
     <style>
       body {
@@ -53,7 +53,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        background-image: url("/quiz_game/icons/quiz-logo.png");
+        background-image: url("icons/quiz-logo.png");
         animation: fill-color 3s ease-in-out infinite;
         animation: fade-in 3s ease-in-out infinite;
       }
@@ -164,7 +164,7 @@
 
         // Dynamically inject the Flutter script
         const flutterScript = document.createElement("script");
-        flutterScript.src = "/quiz_game/flutter_bootstrap.js";
+        flutterScript.src = "flutter_bootstrap.js";
         flutterScript.defer = true;
 
         // Listen for the Flutter app to finish initialization
