--- a/web/index.html
+++ b/web/index.html
@@ -127,7 +127,7 @@
     </style>
   </head>
   <body>
-    <div id="loading" class="loading">
+    <!-- <div id="loading" class="loading">
       <div class="logo"></div>
       <hr />
       <div class="messages-carousel">
@@ -137,7 +137,7 @@
         <div class="message">Almost there...</div>
       </div>
     </div>
-    <div id="flutter-container" class="hidden"></div>
+    <div id="flutter-container" class="hidden"></div> -->
     <script type="text/javascript">
       (function () {
         const redirect = sessionStorage.redirect;
@@ -151,7 +151,7 @@
       })();
     </script>
 
-    <script>
+    <!-- <script>
       if (!window.flutterInitialized) {
         window.flutterInitialized = true;
 
@@ -175,7 +175,7 @@
 
         document.body.appendChild(flutterScript);
       }
-    </script>
-    <!-- <script src="flutter_bootstrap.js" async></script> -->
+    </script> -->
+    <script src="flutter_bootstrap.js" async></script>
   </body>
 </html>
