--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="quiz_game" />
-    <link rel="apple-touch-icon" href="/quiz_game/icons/quiz-logo.png" />
+    <link rel="apple-touch-icon" href="icons/quiz-logo.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/quiz_game/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>quiz_game</title>
-    <link rel="manifest" href="/quiz_game/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
 
     <style>
       body {
@@ -165,7 +165,7 @@
 
         // Dynamically inject the Flutter script
         const flutterScript = document.createElement("script");
-        flutterScript.src = "/quiz_game/flutter_bootstrap.js";
+        flutterScript.src = "flutter_bootstrap.js";
         flutterScript.defer = true;
 
         // Listen for the Flutter app to finish initialization
