Fix repository name in base-href (quiz-game instead of quiz_game)

--- a/web/index.html
+++ b/web/index.html
@@ -144,7 +144,7 @@
         delete sessionStorage.redirect;
         if (
           redirect &&
-          redirect !== location.pathname.replace("/quiz_game", "")
+          redirect !== location.pathname.replace("/quiz-game", "")
         ) {
           history.replaceState(null, "", redirect);
         }
