--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="quiz_game" />
+    <meta name="apple-mobile-web-app-title" content="Quiz Game" />
     <link rel="apple-touch-icon" href="icons/quiz-logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>quiz_game</title>
+    <title>Quiz Game</title>
     <link rel="manifest" href="manifest.json" />
 
     <style>
