--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/quiz_game/" />
+    <base href="/quiz-game/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -144,7 +144,7 @@
         delete sessionStorage.redirect;
         if (
           redirect &&
-          redirect !== location.pathname.replace("/quiz_game", "")
+          redirect !== location.pathname.replace("/quiz-game", "")
         ) {
           history.replaceState(null, "", redirect);
         }
